fix: add gap between title and description

--- a/packages/ocean-core/src/components/_shortcut.scss
+++ b/packages/ocean-core/src/components/_shortcut.scss
@@ -7,6 +7,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  gap: $spacing-inline-xxs;
   padding: $spacing-inline-xs;
   position: relative;
   transition: 200ms ease-in;
